; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/ioat/extr_dma.c_ioat_dma_unmap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/ioat/extr_dma.c_ioat_dma_unmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioat_chan_common = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.pci_dev* }
%struct.pci_dev = type { i32 }
%struct.ioat_dma_descriptor = type { i64, i64, i64 }

@DMA_COMPL_SKIP_DEST_UNMAP = common dso_local global i32 0, align 4
@PCI_DMA_FROMDEVICE = common dso_local global i32 0, align 4
@DMA_COMPL_SKIP_SRC_UNMAP = common dso_local global i32 0, align 4
@PCI_DMA_TODEVICE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ioat_dma_unmap(%struct.ioat_chan_common* %0, i32 %1, i64 %2, %struct.ioat_dma_descriptor* %3) #0 {
  %5 = alloca %struct.ioat_chan_common*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.ioat_dma_descriptor*, align 8
  %9 = alloca %struct.pci_dev*, align 8
  %10 = alloca i64, align 8
  store %struct.ioat_chan_common* %0, %struct.ioat_chan_common** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store %struct.ioat_dma_descriptor* %3, %struct.ioat_dma_descriptor** %8, align 8
  %11 = load %struct.ioat_chan_common*, %struct.ioat_chan_common** %5, align 8
  %12 = getelementptr inbounds %struct.ioat_chan_common, %struct.ioat_chan_common* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load %struct.pci_dev*, %struct.pci_dev** %14, align 8
  store %struct.pci_dev* %15, %struct.pci_dev** %9, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load %struct.ioat_dma_descriptor*, %struct.ioat_dma_descriptor** %8, align 8
  %18 = getelementptr inbounds %struct.ioat_dma_descriptor, %struct.ioat_dma_descriptor* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = sub i64 %16, %19
  store i64 %20, i64* %10, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* @DMA_COMPL_SKIP_DEST_UNMAP, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %36, label %25

25:                                               ; preds = %4
  %26 = load %struct.pci_dev*, %struct.pci_dev** %9, align 8
  %27 = load %struct.ioat_dma_descriptor*, %struct.ioat_dma_descriptor** %8, align 8
  %28 = getelementptr inbounds %struct.ioat_dma_descriptor, %struct.ioat_dma_descriptor* %27, i32 0, i32 2
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* %10, align 8
  %31 = sub i64 %29, %30
  %32 = load i64, i64* %7, align 8
  %33 = load i32, i32* @PCI_DMA_FROMDEVICE, align 4
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @ioat_unmap(%struct.pci_dev* %26, i64 %31, i64 %32, i32 %33, i32 %34, i32 1)
  br label %36

36:                                               ; preds = %25, %4
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* @DMA_COMPL_SKIP_SRC_UNMAP, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %52, label %41

41:                                               ; preds = %36
  %42 = load %struct.pci_dev*, %struct.pci_dev** %9, align 8
  %43 = load %struct.ioat_dma_descriptor*, %struct.ioat_dma_descriptor** %8, align 8
  %44 = getelementptr inbounds %struct.ioat_dma_descriptor, %struct.ioat_dma_descriptor* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = load i64, i64* %10, align 8
  %47 = sub i64 %45, %46
  %48 = load i64, i64* %7, align 8
  %49 = load i32, i32* @PCI_DMA_TODEVICE, align 4
  %50 = load i32, i32* %6, align 4
  %51 = call i32 @ioat_unmap(%struct.pci_dev* %42, i64 %47, i64 %48, i32 %49, i32 %50, i32 0)
  br label %52

52:                                               ; preds = %41, %36
  ret void
}

declare dso_local i32 @ioat_unmap(%struct.pci_dev*, i64, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
